Updated zed part

--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,27 @@
         "spryker/oauth-client": "^1.4.0",
         "spryker/oauth-auth0": "^1.0.0",
         "spryker/oauth-dummy": "^1.0.0",
-        "pavelmaksimov25/app-core-essentials": "^0.2.0"
+        "pavelmaksimov25/app-core-essentials": "dev-main"
     },
     "require-dev": {
+        "spryker/code-sniffer": "^0.17.10",
+        "codeception/codeception": "^5.0.0",
+        "codeception/module-asserts": "^3.0.0",
+        "codeception/module-cli": "^2.0.0",
+        "codeception/module-filesystem": "^3.0.0",
+        "codeception/module-phpbrowser": "^3.0.0",
+        "codeception/module-rest": "^3.0.0",
+        "codeception/module-webdriver": "^3.0.0",
+        "codeception/phpunit-wrapper": "^9.0.0",
+        "codeception/stub": "^4.0.0",
+        "spryker/development": "^3.32.1",
+        "phpunit/phpunit": "^9.5.0 || ^10.0.0",
+        "spryker/testify": "^3.49.0",
+        "spryker-sdk/phpstan-spryker": "^0.4.0",
+        "galbar/jsonpath": "^3.0",
+        "spryker-sdk/security-checker": "^0.2.0",
+        "rector/rector": "^0.19.0",
+        "spryker-sdk/acp": "^0.3.4",
         "spryker-sdk/async-api": "dev-feature/resolve-remote-references as 0.3.1",
         "filp/whoops": "^2.15",
         "spryker/profiler": "^0.1.1",
